{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 14,
  "lineage": "24bd50e3-beb1-50cb-be7b-62874a900e93",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "kurs-06-jf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-89bfd2b0",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-198-97-161.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.97.161",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kurs-06-jf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:internet-gateway/igw-0bee651a60afbf7c0",
            "id": "igw-0bee651a60afbf7c0",
            "owner_id": "936026591534",
            "vpc_id": "vpc-04748f2ecd98843f7"
          },
          "dependencies": [
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "kurs-06-jf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-89bfd2b0",
            "id": "nat-0d85f5b0c16dbbd41",
            "network_interface_id": "eni-0d0bdf254f42ec759",
            "private_ip": "10.10.1.84",
            "public_ip": "18.198.97.161",
            "subnet_id": "subnet-06b106035f470c5f6"
          },
          "dependencies": [
            "aws_eip.kurs-06-jf",
            "aws_internet_gateway.kurs-06-jf",
            "aws_subnet.kurs-06-jf-subnet-01",
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kurs-06-jf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:route-table/rtb-01826337944f6db25",
            "id": "rtb-01826337944f6db25",
            "owner_id": "936026591534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bee651a60afbf7c0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Route Table for public subnet kurs-06-jf-subnet-01",
              "Environment": "day-01",
              "Name": "kurs-06-jf"
            },
            "vpc_id": "vpc-04748f2ecd98843f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kurs-06-jf",
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kurs-06-jf-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:route-table/rtb-020745c05b08edd43",
            "id": "rtb-020745c05b08edd43",
            "owner_id": "936026591534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d85f5b0c16dbbd41",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Route Table for private subnet kurs-06-jf-subnet-02",
              "Environment": "day-01",
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-04748f2ecd98843f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.kurs-06-jf",
            "aws_internet_gateway.kurs-06-jf",
            "aws_nat_gateway.kurs-06-jf",
            "aws_subnet.kurs-06-jf-subnet-01",
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kurs-06-jf-subnet-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:route-table/rtb-06b47ae91373cabdc",
            "id": "rtb-06b47ae91373cabdc",
            "owner_id": "936026591534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d85f5b0c16dbbd41",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Route Table for private subnet kurs-06-jf-subnet-03",
              "Environment": "day-01",
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-04748f2ecd98843f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.kurs-06-jf",
            "aws_internet_gateway.kurs-06-jf",
            "aws_nat_gateway.kurs-06-jf",
            "aws_subnet.kurs-06-jf-subnet-01",
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kurs-06-jf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083189a110b290273",
            "route_table_id": "rtb-01826337944f6db25",
            "subnet_id": "subnet-06b106035f470c5f6"
          },
          "dependencies": [
            "aws_internet_gateway.kurs-06-jf",
            "aws_route_table.kurs-06-jf",
            "aws_subnet.kurs-06-jf-subnet-01",
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kurs-06-jf-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02488c5e1471ec19e",
            "route_table_id": "rtb-020745c05b08edd43",
            "subnet_id": "subnet-058634648ca27e211"
          },
          "dependencies": [
            "aws_eip.kurs-06-jf",
            "aws_internet_gateway.kurs-06-jf",
            "aws_nat_gateway.kurs-06-jf",
            "aws_route_table.kurs-06-jf-subnet-02",
            "aws_subnet.kurs-06-jf-subnet-01",
            "aws_subnet.kurs-06-jf-subnet-02",
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kurs-06-jf-subnet-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04971c12af7623394",
            "route_table_id": "rtb-06b47ae91373cabdc",
            "subnet_id": "subnet-07c708bf385f260dc"
          },
          "dependencies": [
            "aws_eip.kurs-06-jf",
            "aws_internet_gateway.kurs-06-jf",
            "aws_nat_gateway.kurs-06-jf",
            "aws_route_table.kurs-06-jf-subnet-03",
            "aws_subnet.kurs-06-jf-subnet-01",
            "aws_subnet.kurs-06-jf-subnet-03",
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kurs-06-jf-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:subnet/subnet-06b106035f470c5f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-06b106035f470c5f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936026591534",
            "tags": {
              "Description": "Public subnet-01 for kurs-06-jf VPC",
              "Environment": "day-01",
              "Name": "kurs-06-jf-subnet-01"
            },
            "tags_all": {
              "Description": "Public subnet-01 for kurs-06-jf VPC",
              "Environment": "day-01",
              "Name": "kurs-06-jf-subnet-01"
            },
            "vpc_id": "vpc-04748f2ecd98843f7"
          },
          "dependencies": [
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kurs-06-jf-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:subnet/subnet-058634648ca27e211",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-058634648ca27e211",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936026591534",
            "tags": {
              "Description": "Private Subnet kurs-06-jf-subnet-02 for VPC kurs-06-jf",
              "Environment": "day-01",
              "Name": "kurs-06-jf-subnet-02"
            },
            "tags_all": {
              "Description": "Private Subnet kurs-06-jf-subnet-02 for VPC kurs-06-jf",
              "Environment": "day-01",
              "Name": "kurs-06-jf-subnet-02"
            },
            "vpc_id": "vpc-04748f2ecd98843f7"
          },
          "dependencies": [
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kurs-06-jf-subnet-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:subnet/subnet-07c708bf385f260dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-07c708bf385f260dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936026591534",
            "tags": {
              "Description": "Private Subnet kurs-06-jf-subnet-03 for VPC kurs-06-jf",
              "Environment": "day-01",
              "Name": "kurs-06-jf-subnet-03"
            },
            "tags_all": {
              "Description": "Private Subnet kurs-06-jf-subnet-03 for VPC kurs-06-jf",
              "Environment": "day-01",
              "Name": "kurs-06-jf-subnet-03"
            },
            "vpc_id": "vpc-04748f2ecd98843f7"
          },
          "dependencies": [
            "aws_vpc.kurs-06-jf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kurs-06-jf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:vpc/vpc-04748f2ecd98843f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-01d0590020ed83460",
            "default_route_table_id": "rtb-02cfef28df0f573b1",
            "default_security_group_id": "sg-085b4358abef557a2",
            "dhcp_options_id": "dopt-008bcc68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04748f2ecd98843f7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02cfef28df0f573b1",
            "owner_id": "936026591534",
            "tags": {
              "Description": "Example public private VPC",
              "Environment": "day-01",
              "Name": "kurs-06-jf"
            },
            "tags_all": {
              "Description": "Example public private VPC",
              "Environment": "day-01",
              "Name": "kurs-06-jf"
            }
          }
        }
      ]
    }
  ]
}